# chat-server

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.debian  Dockerfile.local  Dockerfile.with-certs  Makefile  README.md  colors.toml  docker-compose.debian.yml  docker-compose.monitoring.yml  docker-compose.yml
.github/workflows/: ci.yml
crates/authentication/application/: Cargo.toml
crates/authentication/application/src/: use_cases.rs
crates/authentication/domain/: Cargo.toml
crates/authentication/domain/src/: errors.rs  (+2 more)
crates/authentication/infrastructure/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  message.rs
crates/messaging/application/: Cargo.toml
crates/messaging/domain/: Cargo.toml
docs/: ADMIN_COMMANDS.md  CHANGELOG.md  FILE_TRANSFER.md  FILE_TRANSFER_RELEASE.md  FTS5_IMPLEMENTATION.md  FTS5_SEARCH.md  IMPLEMENTACOES.md  OFFLINE_MESSAGES.md  OFFLINE_UX_EXAMPLE.md  PROTOCOL.md  QUICKSTART_TUI.md  SQLITE_SUMMARY.md  TLS_SUMMARY.md  TUI_CLIENT.md  TUI_EXAMPLE.md  WEBSOCKET_GATEWAY.md
examples/: web_client.html
monitoring/: README.md  alert_rules.yml  docker-compose.yml  grafana-dashboard.json  prometheus.yml  start.sh
monitoring/alertmanager/: alertmanager.yml  alertmanager.yml.template
monitoring/grafana/dashboards/: chat_metrics.json
monitoring/prometheus/: prometheus.yml  prometheus.yml.template
scripts/: backup-db.sh  db-stats.sh  gen-certs.sh  prepare-certs.sh  run-stress.sh  start-client-tls.sh  start-server-tls.sh  test-offline-messages.sh  test-tls.sh  test_fts5.sh
src/: lib.rs  main.rs
src/client/: handle.rs
src/errors/: error.rs  mod.rs
src/model/: message.rs  mod.rs
src/server/: auth.rs  auth_adapter.rs  core.rs  database.rs  database_adapter.rs  listener.rs  messaging_adapter.rs  mod.rs  presence_adapter.rs  state.rs
src/utils/: logger.rs  metrics.rs  metrics_server.rs  mod.rs
tests/: integration_test.rs  offline_messages_test.rs
(+8 files in other folders)
