[workspace]
members = [
    "crates/domain",
    "crates/authentication/domain",
    "crates/authentication/application",
    "crates/authentication/infrastructure",
]
resolver = "2"

[package]
name = "chat-serve"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependências internas
chat-domain = { path = "crates/domain" }
auth-domain = { path = "crates/authentication/domain" }
auth-application = { path = "crates/authentication/application" }
auth-infrastructure = { path = "crates/authentication/infrastructure" }

# Dependências externas
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Para transformar as mensagens em JSON sobre o TCP
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] } # Se for fazer async
tokio-util = "0.7"
colored = "2.0"
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
prometheus = "0.14"
once_cell = "1.18"
axum = "0.6"
tower-http = { version = "0.4", features = ["fs", "cors", "trace"] }
mime_guess = "2.0"
multer = "3.0"
bcrypt = "0.15"
rpassword = "7.0"
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
webpki-roots = "0.26"
toml = "0.8"
rustls-pki-types = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.26"
crossterm = "0.27"
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["multipart", "stream"] }

[lib]
name = "chat_serve"
path = "src/lib.rs"

[[bin]]
name = "chat_server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "tui"
path = "src/bin/tui_client.rs"

[[bin]]
name = "ws_gateway"
path = "src/bin/ws_gateway.rs"
[[bin]]
name = "file_server"
path = "src/bin/file_server.rs"